hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_exit@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [5 x i8] c"EXIT\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal { i16, i16 } @_hl.main.1(i16 %0, i16 %1) !dbg !3 {
alloca_block:
  %"0" = alloca i16, align 2
  %"1" = alloca i16, align 2
  %"5_0" = alloca { i32, ptr }, align 8
  %"2_0" = alloca i16, align 2
  %"2_1" = alloca i16, align 2
  %"6_0" = alloca i16, align 2
  %"6_1" = alloca i16, align 2
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, ptr } { i32 42, ptr @0 }, ptr %"5_0", align 8
  store i16 %0, ptr %"2_0", align 2
  store i16 %1, ptr %"2_1", align 2
  %"5_01" = load { i32, ptr }, ptr %"5_0", align 8
  %"2_02" = load i16, ptr %"2_0", align 2
  %"2_13" = load i16, ptr %"2_1", align 2
  %2 = extractvalue { i32, ptr } %"5_01", 0, !dbg !10
  %3 = extractvalue { i32, ptr } %"5_01", 1, !dbg !10
  %4 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %2, ptr %3), !dbg !10
  call void @abort(), !dbg !10
  store i16 0, ptr %"6_0", align 2, !dbg !10
  store i16 0, ptr %"6_1", align 2, !dbg !10
  %"6_04" = load i16, ptr %"6_0", align 2
  %"6_15" = load i16, ptr %"6_1", align 2
  store i16 %"6_04", ptr %"0", align 2
  store i16 %"6_15", ptr %"1", align 2
  %"06" = load i16, ptr %"0", align 2
  %"17" = load i16, ptr %"1", align 2
  %mrv = insertvalue { i16, i16 } poison, i16 %"06", 0
  %mrv8 = insertvalue { i16, i16 } %mrv, i16 %"17", 1
  ret { i16, i16 } %mrv8
}

declare i32 @printf(ptr, ...)

declare void @abort()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i16, i16 }", file: !2, size: 4, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!10 = !DILocation(line: 27062, column: 402, scope: !3)
