hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_error@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [7 x i8] c"Error!\00", align 1

define internal { i32, ptr } @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca { i32, ptr }, align 8
  %"7_0" = alloca ptr, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { i32, ptr }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @0, ptr %"7_0", align 8
  store i64 100, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load ptr, ptr %"7_0", align 8
  %0 = trunc i64 %"5_01" to i32, !dbg !11
  %1 = insertvalue { i32, ptr } undef, i32 %0, 0, !dbg !11
  %2 = insertvalue { i32, ptr } %1, ptr %"7_02", 1, !dbg !11
  store { i32, ptr } %2, ptr %"8_0", align 8, !dbg !11
  %"8_03" = load { i32, ptr }, ptr %"8_0", align 8
  store { i32, ptr } %"8_03", ptr %"0", align 8
  %"04" = load { i32, ptr }, ptr %"0", align 8
  ret { i32, ptr } %"04"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 12, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!11 = !DILocation(line: 5299, column: 65, scope: !3)
