hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_error_and_panic@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [7 x i8] c"Error!\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = trunc i64 100 to i32, !dbg !7
  %1 = insertvalue { i32, ptr } undef, i32 %0, 0, !dbg !7
  %2 = insertvalue { i32, ptr } %1, ptr @0, 1, !dbg !7
  %3 = extractvalue { i32, ptr } %2, 0, !dbg !8
  %4 = extractvalue { i32, ptr } %2, 1, !dbg !8
  %5 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %3, ptr %4), !dbg !8
  call void @abort(), !dbg !8
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/NzlVLClAph/GIyr/vZsHeDgUnyeIVwAutKJH/ZEPSZwPXPeycUvnu/GxZKPRCTcNfsTEGLoPGCKH")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = !DILocation(line: 27062, column: 402, scope: !3)
!8 = !DILocation(line: 5388, column: 404, scope: !3)
